--- a/fr/config.yml
+++ b/fr/config.yml
@@ -18,6 +18,7 @@ book:
         - { element: chapter, number: 2, content: chapter2.md }
         - { element: chapter, number: 3, content: chapter3.md }
         - { element: chapter, number: 4, content: chapter4.md }
+        - { element: chapter, number: 5, content: chapter5.md }
 
     editions:
         ebook:
