update website configuration

--- a/en/config.yml
+++ b/en/config.yml
@@ -56,3 +56,5 @@ book:
         website:
             extends:        web
             format:         html_chunked
+            toc:
+                deep:       2
