--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 php:
-  - 5.4
+  - 5.3
 before_script:
   - git clone git://github.com/marmotz/sia.git
   - git clone git://github.com/marmotz/LinksChecker.git
@@ -8,8 +8,6 @@ before_script:
   - mkdir -p output/fr output/en
   - ./sia/bin/sia -i fr -o output/fr -t atoum
   - ./sia/bin/sia -i en -o output/en -t atoum
-script:
-  - ./LinksChecker/check output/fr/chapter1.html
-  - ./LinksChecker/check output/en/chapter1.html
+script: ./LinksChecker/check output/fr/chapter1.html && ./LinksChecker/check output/en/chapter1.html
 #notifications:
 #  irc: "irc.freenode.org##atoum"
