--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ before_script:
   - mkdir -p output/fr output/en
   - ./sia/bin/sia -i fr -o output/fr -t atoum
   - ./sia/bin/sia -i en -o output/en -t atoum
+  - export ADDITIONAL_PATH=`php -i | grep -F --color=never 'Scan this dir for additional .ini files'`
+  - ls -al ${ADDITIONAL_PATH:42}
+  - echo 'xdebug.max_nesting_level=9999' | sudo tee ${ADDITIONAL_PATH:42}/atoum-doc.ini
 script: ./LinksChecker/check output/fr/chapter1.html && ./LinksChecker/check output/en/chapter1.html
 #notifications:
 #  irc: "irc.freenode.org##atoum"
