test an error for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,8 @@ before_script:
   - ./sia/bin/sia -i en -o output/en -t atoum
   - export ADDITIONAL_PATH=`php -i | grep -F --color=never 'Scan this dir for additional .ini files'`
   - cat ${ADDITIONAL_PATH:42}/xdebug.ini
-  - sed '/xdebug.max_nesting_level/d' ${ADDITIONAL_PATH:42}/xdebug.ini > xdebug.ini
-  - echo 'xdebug.max_nesting_level=9999' | tee xdebug.ini
-  - sudo mv xdebug.ini ${ADDITIONAL_PATH:42}/xdebug.ini
+  - echo 'xdebug.max_nesting_level=9999' >> ${ADDITIONAL_PATH:42}/xdebug.ini
   - cat ${ADDITIONAL_PATH:42}/xdebug.ini
 script: ./LinksChecker/check output/fr/chapter1.html && ./LinksChecker/check output/en/chapter1.html
-#notifications:
-#  irc: "irc.freenode.org##atoum"
+notifications:
+  irc: "irc.freenode.org##atoum"
