fix travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ before_script:
   - ./sia/bin/sia -i en -o output/en -t atoum
   - export ADDITIONAL_PATH=`php -i | grep -F --color=never 'Scan this dir for additional .ini files'`
   - echo 'xdebug.max_nesting_level=9999' >> ${ADDITIONAL_PATH:42}/xdebug.ini
-script: ./LinksChecker/check output/fr/chapter1.html && ./LinksChecker/check output/en/chapter1.html
+script: ./LinksChecker/check output/fr/chapitre1.html && ./LinksChecker/check output/en/chapter1.html
 notifications:
   irc: "irc.freenode.org##atoum"
