--- a/crowdin.yaml
+++ b/crowdin.yaml
@@ -13,6 +13,37 @@ files:
     translation : '/source/%two_letters_code%/%file_name%.rst'
 
   -
+    source      : '/source/fr/cookbooks/framework.inc.rst'
+    dest        : '/source/fr/cookbooks/framework.inc.txt'
+    translation : '/source/%two_letters_code%/%file_name%.rst'
+
+  -
+    source      : '/source/fr/cookbooks/hook.inc.rst'
+    dest        : '/source/fr/cookbooks/hook.inc.txt'
+    translation : '/source/%two_letters_code%/%file_name%.rst'
+
+  -
+    source      : '/source/fr/cookbooks/outils.inc.rst'
+    dest        : '/source/fr/cookbooks/outils.inc.txt'
+    translation : '/source/%two_letters_code%/%file_name%.rst'
+    languages_mapping:
+      file_name:
+        en: tools.inc
+
+  -
+    source      : '/source/fr/cookbooks/php.inc.rst'
+    dest        : '/source/fr/cookbooks/php.inc.txt'
+    translation : '/source/%two_letters_code%/%file_name%.rst'
+    languages_mapping:
+      file_name:
+        en: receipt.inc
+
+  -
+    source      : '/source/fr/cookbooks/recette.inc.rst'
+    dest        : '/source/fr/cookbooks/recette.inc.txt'
+    translation : '/source/%two_letters_code%/%file_name%.rst'
+
+  -
     source      : '/source/fr/extensions.rst'
     dest        : '/source/fr/extensions.txt'
     translation : '/source/%two_letters_code%/%file_name%.rst'
